syntax = "proto3";

message AnyMessage {
  oneof data {
	GameState state = 1;
	GameStart start = 2;
	PlayerJoin join = 3;
    Ping pong = 4;
  }
}


message GameState {
  Ball ball = 1;
  map<uint32, Player> players = 2;
  uint64 timestamp = 3;
}

message Player {
  float Xpos = 1;
  float Ypos = 2;
  float Xlast = 3;
  float Ylast = 4;
}

message Ball {
  float Xpos = 1;
  float Ypos = 2;
  float Zpos = 3;
  float Xvel = 4;
  float Yvel = 5;
  float Zvel = 6;
  float Xang = 7;
  float Yang = 8;
  float Zang = 9;
}

message GameStart {
  uint32 YourID = 1;
  Wall wall = 2;  
}

message PlayerJoin {
  map<uint32, Wall> playerWalls = 1;
}

enum Wall {
  FRONT = 0;
  BACK = 1;
}

message Ping {
  uint64 timestamp = 1;
}

message ClientMessage {
  oneof data {
    Player player = 1;
    Ping ping = 2;
  }
}
